--- a/.github/workflows/upstream-commit-watcher.yml
+++ b/.github/workflows/upstream-commit-watcher.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get latest commit SHA from neodrama/github-drama
         id: get_commit
         run: |
-          LATEST_SHA=$(curl -s https://api.github.com/repos/neodrama/github-drama/commits/main | jq -r .sha)
+          LATEST_SHA=$(curl -s https://api.github.com/repos/neodrama/github-drama/commits?per_page=1 | jq -r '.[0].sha // empty')
           echo "latest_sha=$LATEST_SHA" >> $GITHUB_OUTPUT
 
       - name: Get last seen SHA from tracker issue
@@ -28,21 +28,22 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'open',
-              labels: '',
-              per_page: 100
+              labels: 'Upstream Commit Tracker',
+              per_page: 1
             });
-            const tracker = issues.find(i => i.title === 'Upstream Commit Tracker');
-            if (tracker) {
-              const sha = tracker.body.trim();
-              core.setOutput('last_sha', sha);
-              core.setOutput('issue_number', tracker.number);
+            if (issues.length > 0) {
+              const tracker = issues[0];
+              const match = tracker.body && tracker.body.match(/Last seen SHA: ([a-f0-9]+)/);
+              const lastSha = match ? match[1] : '';
+              core.setOutput('last_sha', lastSha);
+              core.setOutput('issue_number', tracker.number.toString());
             } else {
               core.setOutput('last_sha', '');
               core.setOutput('issue_number', '');
             }
 
       - name: Open issue if new commit
-        if: ${{ steps.get_commit.outputs.latest_sha != '' && steps.get_commit.outputs.latest_sha != 'null' && steps.get_commit.outputs.latest_sha != steps.get_last_sha.outputs.last_sha }}
+        if: ${{ steps.get_commit.outputs.latest_sha != '' && steps.get_commit.outputs.latest_sha != 'null' && (steps.get_last_sha.outputs.last_sha == '' || steps.get_commit.outputs.latest_sha != steps.get_last_sha.outputs.last_sha) }}
         uses: actions/github-script@v7
         env:
           LATEST_SHA: ${{ steps.get_commit.outputs.latest_sha }}
@@ -51,9 +52,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const latestSha = process.env.LATEST_SHA;
-            const lastSha = process.env.LAST_SHA;
-            const issueNumber = process.env.ISSUE_NUMBER;
+            const latestSha = process.env.LATEST_SHA || '';
+            const lastSha = process.env.LAST_SHA || '';
+            const issueNumber = process.env.ISSUE_NUMBER || '';
             if (!latestSha || latestSha === 'null') {
               console.log('No valid latest SHA found, skipping issue creation.');
               return;
