--- a/.github/workflows/upstream-commit-watcher.yml
+++ b/.github/workflows/upstream-commit-watcher.yml
@@ -42,48 +42,69 @@ jobs:
               core.setOutput('issue_number', '');
             }
 
-      - name: Open issue if new commit
-        if: ${{ steps.get_commit.outputs.latest_sha != '' && steps.get_commit.outputs.latest_sha != 'null' && (steps.get_last_sha.outputs.last_sha == '' || steps.get_commit.outputs.latest_sha != steps.get_last_sha.outputs.last_sha) }}
+      - name: Check for existing Upstream SHA issue
+        id: check_sha_issue
         uses: actions/github-script@v7
         env:
           LATEST_SHA: ${{ steps.get_commit.outputs.latest_sha }}
-          LAST_SHA: ${{ steps.get_last_sha.outputs.last_sha }}
-          ISSUE_NUMBER: ${{ steps.get_last_sha.outputs.issue_number }}
+        with:
+          script: |
+            const latestSha = process.env.LATEST_SHA;
+            if (!latestSha) {
+              core.setOutput('exists', 'false');
+              return;
+            }
+            const { data: issues } = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              per_page: 10
+            });
+            const exists = issues.some(issue => issue.title === `Upstream SHA: ${latestSha}`);
+            core.setOutput('exists', exists ? 'true' : 'false');
+
+      - name: Open issue if new commit
+        if: ${{ steps.get_commit.outputs.latest_sha != '' && steps.get_commit.outputs.latest_sha != 'null' && (steps.get_last_sha.outputs.last_sha == '' || steps.get_commit.outputs.latest_sha != steps.get_last_sha.outputs.last_sha) && steps.check_sha_issue.outputs.exists == 'false' }}
+        uses: actions/github-script@v7
+        env:
+          LATEST_SHA: ${{ steps.get_commit.outputs.latest_sha }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const latestSha = process.env.LATEST_SHA || '';
-            const lastSha = process.env.LAST_SHA || '';
-            const issueNumber = process.env.ISSUE_NUMBER || '';
-            if (!latestSha || latestSha === 'null') {
-              console.log('No valid latest SHA found, skipping issue creation.');
-              return;
-            }
-            // Open a new issue about the new commit
+            const latestSha = process.env.LATEST_SHA;
             await github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: `Upstream SHA: ${latestSha}`,
               body: `A new commit (${latestSha}) was pushed to neodrama/github-drama.\n\nSee: https://github.com/neodrama/github-drama/commit/${latestSha}`
             });
-            // Update or create the tracker issue
-            // Only update or create the tracker issue if the SHA is valid
-            if (latestSha && latestSha !== 'null' && latestSha !== '') {
-              if (issueNumber && issueNumber !== 'undefined' && issueNumber !== '') {
-                await github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: Number(issueNumber),
-                  body: latestSha
-                });
-              } else {
-                await github.rest.issues.create({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  title: 'Upstream Commit Tracker',
-                  body: latestSha
-                });
-              }
+
+      - name: Update or create tracker issue
+        if: ${{ steps.get_commit.outputs.latest_sha != '' && steps.get_commit.outputs.latest_sha != 'null' && (steps.get_last_sha.outputs.last_sha == '' || steps.get_commit.outputs.latest_sha != steps.get_last_sha.outputs.last_sha) }}
+        uses: actions/github-script@v7
+        env:
+          LATEST_SHA: ${{ steps.get_commit.outputs.latest_sha }}
+          ISSUE_NUMBER: ${{ steps.get_last_sha.outputs.issue_number }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const latestSha = process.env.LATEST_SHA;
+            const issueNumber = process.env.ISSUE_NUMBER;
+            const trackerBody = `Last seen SHA: ${latestSha}`;
+            if (issueNumber && issueNumber !== 'undefined' && issueNumber !== '') {
+              await github.rest.issues.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: Number(issueNumber),
+                body: trackerBody,
+                labels: ['Upstream Commit Tracker']
+              });
             } else {
-              console.log('Not updating tracker issue because latest SHA is invalid.');
+              await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: 'Upstream Commit Tracker',
+                body: trackerBody,
+                labels: ['Upstream Commit Tracker']
+              });
             }
