--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/hacker@v0.2.0
 title: Github Drama Repo - Updated
 description: Github Drama Repo - for all the juicy Github drama!!!
-url: "https://neodrama.github.io/github-drama" # the base hostname & protocol for your site
+url: "https://nick2bad4u.github.io/github-drama" # the base hostname & protocol for your site
 permalink: pretty # use pretty permalinks
 livereload: true # enable live reloading
 timezone: "America/New_York" # set the timezone for your site
